 Bug 480767 -  Closing 'Bookmark All Tabs' screws up focus, r+sr=jst