layout/base/nsPresShell.cpp
@@ -880,7 +880,8 @@ public:
   virtual nsresult ReconstructFrames(void);
   virtual void Freeze();
   virtual void Thaw();
-  virtual void NeedsBlurAfterSuppression(nsPIDOMEventTarget* aTarget);
+  virtual void NeedsFocusOrBlurAfterSuppression(nsPIDOMEventTarget* aTarget,
+                                                PRUint32 aEventType);
   virtual void FireOrClearDelayedEvents(PRBool aFireEvents);
 
   virtual nsIFrame* GetFrameForPoint(nsIFrame* aFrame, nsPoint aPt);
@@ -1154,12 +1155,18 @@ protected:
   
   nsRevocableEventPtr<ReflowEvent> mReflowEvent;
 
-  PRPackedBool                   mNeedsGotFocus;
-  PRPackedBool                   mNeedsLostFocus;
-  PRPackedBool                   mMozTakingFocus;
-  PRPackedBool                   mNeedsActivate;
-  PRPackedBool                   mNeedsDeactivate;
-  nsCOMArray<nsPIDOMEventTarget> mDelayedBlurTargets;
+  struct nsBlurOrFocusTarget
+  {
+    nsBlurOrFocusTarget(nsPIDOMEventTarget* aTarget, PRUint32 aEventType)
+    : mTarget(aTarget), mEventType(aEventType) {}
+    nsBlurOrFocusTarget(const nsBlurOrFocusTarget& aOther)
+    : mTarget(aOther.mTarget), mEventType(aOther.mEventType) {}
+
+    nsCOMPtr<nsPIDOMEventTarget> mTarget;
+    PRUint32                     mEventType;
+  };
+
+  nsTArray<nsBlurOrFocusTarget> mDelayedBlurFocusTargets;
 
   nsCallbackEventRequest* mFirstCallbackEventRequest;
   nsCallbackEventRequest* mLastCallbackEventRequest;
@@ -5629,36 +5636,18 @@ PresShell::HandleEvent(nsIView         *aView,
     }
     return NS_OK;
   }
-  
+
+  PRBool widgetHandlingEvent =
+    (aEvent->message == NS_GOTFOCUS ||
+     aEvent->message == NS_LOSTFOCUS ||
+     aEvent->message == NS_ACTIVATE ||
+     aEvent->message == NS_DEACTIVATE);
   if (mDocument && mDocument->EventHandlingSuppressed()) {
-    switch (aEvent->message) {
-      case NS_GOTFOCUS:
-        mNeedsGotFocus = PR_TRUE;
-        mNeedsLostFocus = PR_FALSE;
-        mNeedsDeactivate = PR_FALSE;
-        break;
-      case NS_LOSTFOCUS:
-        mNeedsLostFocus = PR_TRUE;
-        mNeedsGotFocus = PR_FALSE;
-        mNeedsActivate = PR_FALSE;
-        mMozTakingFocus =
-          (aEvent->eventStructType == NS_FOCUS_EVENT &&
-           static_cast<nsFocusEvent*>(aEvent)->isMozWindowTakingFocus);
-        break;
-      case NS_ACTIVATE:
-        mNeedsActivate = PR_TRUE;
-        mNeedsDeactivate = PR_FALSE;
-        mNeedsLostFocus = PR_FALSE;
-        break;
-      case NS_DEACTIVATE:
-        mNeedsDeactivate = PR_TRUE;
-        mNeedsActivate = PR_FALSE;
-        mNeedsGotFocus = PR_FALSE;
-        break;
-      default:
-        break;
+    if (!widgetHandlingEvent) {
+      return NS_OK;
     }
-    return NS_OK;
+  } else if (widgetHandlingEvent) {
+    mDelayedBlurFocusTargets.Clear();
   }
 
   nsIFrame* frame = static_cast<nsIFrame*>(aView->GetClientData());
@@ -6521,72 +6510,38 @@ void
 PresShell::FireOrClearDelayedEvents(PRBool aFireEvents)
 {
   if (!aFireEvents) {
-    mDelayedBlurTargets.Clear();
-    mNeedsGotFocus = mNeedsLostFocus = mMozTakingFocus = mNeedsActivate =
-      mNeedsDeactivate = PR_FALSE;
+    mDelayedBlurFocusTargets.Clear();
     return;
   }
 
   if (!mIsDestroying && mDocument) {
     nsCOMPtr<nsIDocument> doc = mDocument;
-    for (PRInt32 i = 0;
-         (i < mDelayedBlurTargets.Count()) &&
-         !doc->EventHandlingSuppressed(); ++i) {
-      nsEvent blurevent(PR_TRUE, NS_BLUR_CONTENT);
-      blurevent.flags |= NS_EVENT_FLAG_CANT_BUBBLE;
-      nsEventDispatcher::Dispatch(mDelayedBlurTargets[i], mPresContext, &blurevent);
+    while (mDelayedBlurFocusTargets.Length() && !doc->EventHandlingSuppressed()) {
+      nsEvent event(PR_TRUE, mDelayedBlurFocusTargets[0].mEventType);
+      event.flags |= NS_EVENT_FLAG_CANT_BUBBLE;
+      nsEventDispatcher::Dispatch(mDelayedBlurFocusTargets[0].mTarget,
+                                  mPresContext, &event);
+      mDelayedBlurFocusTargets.RemoveElementAt(0);
     }
-    mDelayedBlurTargets.Clear();
-
-    nsFocusEvent firstEvent(PR_TRUE, NS_EVENT_NULL, nsnull);
-    nsFocusEvent secondEvent(PR_TRUE, NS_EVENT_NULL, nsnull);
-    if (mNeedsGotFocus) {
-      firstEvent.message = NS_GOTFOCUS;
-    } else if (mNeedsDeactivate) {
-      firstEvent.message = NS_DEACTIVATE;
-    }
-    if (mNeedsActivate) {
-      secondEvent.message = NS_ACTIVATE;
-    } else if (mNeedsLostFocus) {
-      secondEvent.message = NS_LOSTFOCUS;
-      secondEvent.isMozWindowTakingFocus = mMozTakingFocus;
-    }
-    mNeedsGotFocus = mNeedsLostFocus = mMozTakingFocus = mNeedsActivate =
-      mNeedsDeactivate = PR_FALSE;
-
-    if (firstEvent.message && !mIsDestroying &&
-        !doc->EventHandlingSuppressed()) {
-      nsIViewManager* vm = GetViewManager();
-      if (vm) {
-        nsIView* view = nsnull;
-        vm->GetRootView(view);
-        if (view) {
-          nsEventStatus status = nsEventStatus_eIgnore;
-          HandleEvent(view, &firstEvent, &status);
-        }
-      }
-    }
-    if (secondEvent.message && !mIsDestroying &&
-        !doc->EventHandlingSuppressed()) {
-      nsIViewManager* vm = GetViewManager();
-      if (vm) {
-        nsIView* view = nsnull;
-        vm->GetRootView(view);
-        if (view) {
-          nsEventStatus status = nsEventStatus_eIgnore;
-          HandleEvent(view, &secondEvent, &status);
-        }
-      }
+    if (!doc->EventHandlingSuppressed()) {
+      mDelayedBlurFocusTargets.Clear();
     }
   }
 }
 
 void
-PresShell::NeedsBlurAfterSuppression(nsPIDOMEventTarget* aTarget)
+PresShell::NeedsFocusOrBlurAfterSuppression(nsPIDOMEventTarget* aTarget,
+                                            PRUint32 aEventType)
 {
   if (mDocument && mDocument->EventHandlingSuppressed()) {
-    mDelayedBlurTargets.RemoveObject(aTarget);
-    mDelayedBlurTargets.AppendObject(aTarget);
+    for (PRUint32 i = mDelayedBlurFocusTargets.Length(); i > 0; --i) {
+      if (mDelayedBlurFocusTargets[i - 1].mTarget == aTarget &&
+          mDelayedBlurFocusTargets[i - 1].mEventType == aEventType) {
+        mDelayedBlurFocusTargets.RemoveElementAt(i - 1);
+      }
+    }
+
+    mDelayedBlurFocusTargets.AppendElement(nsBlurOrFocusTarget(aTarget, aEventType));
   }
 }
 
